# video_marker_backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_projects.py  0003_reconstruction_models_and_timestamps.py
app/: main.py
app/api/: image_sets.py  projects.py  reconstruction_models.py  videos.py
app/core/: config.py
app/db/: session.py
app/models/: annotation_document.py  frame.py  image_set.py  project.py  reconstruction_model.py
app/schemas/: annotations.py  exports.py  image_sets.py  projects.py  reconstruction_models.py
app/services/: annotations.py  exports.py  frame_extraction.py  projects.py  reconstruction_models.py  storage.py  videos.py
